...
            sinceFilter = viewState.sinceFilter,
            languageFilter = viewState.languageFilter,
            onChangeSinceFilter = { viewModel.dispatch(RecommendAction.ChangeSinceFilter(it)) },
            onChangeLanguageFilter = { viewModel.dispatch(RecommendAction.ChangeLanguage(it)) }
        )

        Box(modifier = Modifier.semantics { contentDescription = "RecommendList" }) {
            RecommendRefreshContent(
                isRefreshing = viewState.isRefreshing,
                lazyListState = lazyListState,
                dataList = viewState.dataList,
                cacheList = viewState.cacheDataList,
                navController = navController
...
    BaseRefresh(
        isRefresh = isRefreshing,
        itemList = dataList,
        cacheItemList = cacheList,
        lazyListState = lazyListState,
        itemUi = {
            RepoItem(it, isRefreshing, navController) {
                navController.navigate("${Route.REPO_DETAIL}/${it.repositoryName}/${it.ownerName}")
            }
        },
        onRefresh = onRefresh,
        onClickItem = {},
        headerItem = {
...
